src/App.css
@font-face {
  font-family: "Ubuntu";
  src: url("../public/Ubuntu/Ubuntu-Light.ttf");
}

* {
  /* background-image: url("circuit-7447920_960_720.png"); */
  /* background-size: cover; */
  --primary-color: rgb(43, 212, 170);
  --secondary-color: rgb(212, 43, 85);
  --tertiary-color: rgb(84, 43, 212);
  --quaternary-color: rgb(170, 212, 43);
  --background-color: rgb(29, 26, 26);
}

:root {
  background-color: var(--background-color);
  font-size: 1.5em;
 

}

a:link {
  color: var(--secondary-color);
}

/* visited link */
a:visited {
  color: var(--quaternary-color);
}

/* mouse over link */

a:hover {
  color: var(--tertiary-color);
}




.flex {
  /* display: flex; */
  /* align-items: center; */
  /* justify-content: center; */
}

.App {
  display: flex;
  align-items: center;
  justify-content: center; 
  flex-direction: column;
  text-align: center;
  margin: auto;
  max-width: 50em;
  font-family: "Ubuntu";
  background-color: var(--background-color);
  color: var(--primary-color);
  height: 1000px;
  overflow: scroll;
}

.link-icon {
  font-size: .75em;

}

.link-img {
  max-height: 1em;
  max-width: 1em;
  filter: invert(100%);
  margin-bottom: -0.15em;
}



/* Light mode */
/* @media (prefers-color-scheme: light) {
  body {
      background-color: white;
      color: black;
  }
} */

/* Dark mode */
/* @media (prefers-color-scheme: dark) {
  body {
      background-color: black;
      color: white;
  }
} */


.text-wrapper {
  max-width: 50em;
  justify-content: left;
}


.img-wrapper {
  display: block;
  margin: auto;
  justify-content: center;
  align-items: center;
  width: 16em;
  height: 9em;
}



.pageHeader {

}

.pageHeader h1 {
  margin: 0;
}

.pageHeader span {
  /* margin-right: 10px; */
  justify-content: flex-start;
}

.pageHeader img {
  max-height: 24px;
  /* margin-right: 10px; */
}


.projectCard {
  /* max-width: 50em; */
  /* max-width: 100%; */
  position: relative;
  display: flex;
  background-color: rgb(20, 34, 39);
 
}
.projectCard-X {
  position: absolute;
  float: right;
  width: 100%;
  text-align: right;
  padding: 10px;
}

.projectCard-text-wrapper {
  max-width: 34em;
  text-align: left;
  font-size: .9em;
  /* margin-right: 5px; */
}

.projectCard article {
  display: flex;
  justify-content: space-between;
  /* border: 1px solid blue; */
}

.projectCard img {
  width: 100%;
  height: auto;
}

/* .aboutMe {} */

.thumbnail {
  text-align: center;
  /* margin: 10px; */
  /* display: flex; */
  padding: 5px;
  background-color: black;
  /* min-width: 20%; */
}


.thumbnail img {
  max-height: 150px;
  max-width: 100%;
}

.thumbnail-container {
  display: flex;
  /* flex-grow: 1; */
  justify-content: space-between;  
}

.projects-container {
  
  display: flex;
  /* justify-content: space-between;   */
  flex-direction: column;

  /* flex-grow: 1; */
}

.hidden  {
  display: none !important;
  /* opacity: 0; */
}

.focused-project {
  background-color: rgb(20, 34, 39);
  display: flex;

}
.break {
  flex-basis: 100%;
  width: 0px;
}

.selected-project {
  background-color: rgb(20, 34, 39);
}

